# data-diff

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_MAP.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  ci_full.yml  formatter.yml  label-update_awaiting-response-to-triage.yml  label-update_stale-to-triage.yml  release.yml  stale.yml  triage_labels.yml
data_diff/: __init__.py  __main__.py  config.py  dbt.py  dbt_config_validators.py  dbt_parser.py  diff_tables.py  errors.py  format.py  hashdiff_tables.py  info_tree.py  joindiff_tables.py  lexicographic_space.py  parse_time.py  query_utils.py  schema.py  table_segment.py  thread_utils.py  utils.py
data_diff/abcs/: database_types.py
data_diff/databases/: __init__.py  _connect.py  base.py  bigquery.py  clickhouse.py  databricks.py  duckdb.py  mssql.py  mysql.py  oracle.py  postgresql.py  presto.py  redshift.py  snowflake.py  trino.py  vertica.py
data_diff/queries/: api.py  ast_classes.py  base.py  extras.py
dev/: .env.example  Dockerfile.prestosql.340  _bq_import_csv.py  graph.py
dev/seed/mysql/: 01_seed.sql
dev/seed/postgres/: 01_seed.sql
dev/trino-conf/etc/: jvm.config
docs/: conf.py  index.rst  new-database-driver-guide.rst
tests/: common.py  conftest.py  test_api.py  test_cli.py  test_collation.py  test_config.py  test_database.py  test_database_types.py  test_datetime_parsing.py  test_dbt.py  test_dbt_config_validators.py  test_dbt_parser.py  test_diff_tables.py  test_duckdb.py  test_format.py  test_joindiff.py  test_main.py  test_mesh.py  test_mssql.py  test_parse_time.py  test_postgresql.py  test_query.py  test_sql.py  test_thread_utils.py  test_utils.py  waiting_for_stack_up.sh
