[project]
name = "data-diff"
version = "1.0.0"
description = "Command-line tool and Python library to efficiently diff rows across two different databases."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed",
]

dependencies = [
    "attrs>=23.1.0",
    "click>=8.1",
    "dsnparse<0.2.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "tabulate>=0.9.0",
    "tomli>=2.0; python_version < '3.11'",
    "typing-extensions>=4.0.1",
]

[project.optional-dependencies]
mysql = ["mysql-connector-python>=8.0.29"]
postgresql = ["psycopg2>=2.9"]
redshift = ["psycopg2>=2.9"]
snowflake = ["snowflake-connector-python>=3.0.2,<4.0.0", "cryptography>=3.0"]
presto = ["presto-python-client>=0.8.3"]
oracle = ["oracledb>=1.0"]
mssql = ["pyodbc>=4.0.39"]
trino = ["trino>=0.314.0"]
clickhouse = ["clickhouse-driver>=0.2"]
vertica = ["vertica-python>=1.0"]
duckdb = ["duckdb>=0.9.0"]
bigquery = ["google-cloud-bigquery>=3.0"]
databricks = ["databricks-sql-connector>=2.0"]
dbt = ["dbt-core>=1.5"]
preql = ["preql>=0.2.19"]
all-dbs = [
    "mysql-connector-python>=8.0.29",
    "psycopg2>=2.9",
    "snowflake-connector-python>=3.0.2,<4.0.0",
    "cryptography>=3.0",
    "presto-python-client>=0.8.3",
    "oracledb>=1.0",
    "pyodbc>=4.0.39",
    "trino>=0.314.0",
    "clickhouse-driver>=0.2",
    "vertica-python>=1.0",
    "duckdb>=0.9.0",
]

[project.scripts]
data-diff = "data_diff.__main__:main"

[project.urls]
Repository = "https://github.com/datafold/data-diff"
Issues = "https://github.com/datafold/data-diff/issues"
Changelog = "https://github.com/datafold/data-diff/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.2",
    "ruff>=0.9.0",
    "mysql-connector-python>=8.0.29",
    "psycopg2>=2.9",
    "snowflake-connector-python>=3.0.2,<4.0.0",
    "cryptography>=3.0",
    "trino>=0.314.0",
    "presto-python-client>=0.8.3",
    "clickhouse-driver>=0.2",
    "vertica-python>=1.0",
    "duckdb>=0.9.0",
    "preql>=0.2.19",
    "parameterized>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_diff"]

[tool.ty]
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x --timeout=300 --tb=short"
markers = [
    "database: requires database connection",
    "slow: >30 seconds",
]
